# tuitor_ws

./: README.md
QPOASES/: CMakeLists.txt  main.cpp  readme.md
QuadProgpp/: CMakeLists.txt  main.cpp  readme.md
ceres/: CMakeLists.txt  main.cpp
cmake/: cmake_tuitor.md  readme.md
cmake/step1/: CMakeLists.txt  main.cpp
cmake/step1/MathFunctions/: CMakeLists.txt
cmake/step3/: CMakeLists.txt
cmake/step4/: CMakeLists.txt
cmake/step4/src/: main.cpp
cmake/step5/: CMakeLists.txt
cmake/step5/cmake/: FindHELLO.cmake
cmake/step5/lib/: CMakeLists.txt  hello.cpp  hello.h
cmake/step6/: CMakeLists.txt
cmake/step6/src/: CMakeLists.txt
cmake/step7/: CMakeLists.txt
cmake/step7/cmake/: FindHELLO.cmake
cmake/step7/src/: CMakeLists.txt  main.cpp
lcm/: readme.md
lcm/script/: listener.py  send_message.py
lcm/src/: CMakeLists.txt  listener.cpp  send_msg.cpp
lcm/type/: example_t.lcm  gen_type.sh
lcm/type/exlcm/: example_t.hpp
